--- a/content/posts/2020-03-17-tulisan-pertama-di-tengah-corona.Rmd
+++ b/content/posts/2020-03-17-tulisan-pertama-di-tengah-corona.Rmd
@@ -11,7 +11,7 @@ categories: []
 type: post
 ---
 
-**Bookdown and Blogdown**
+# Bookdown and Blogdown
 
 Setelah kurang lebih satu bulan belajar tentang **bookdown**, terbersit dalam hati untuk mencoba belajar bagaimana membuat blog menggunakan R, Rstudio, dan `blogdown`. Ternyata membuat blog menggunakan R Studio sangat mudah. Langkah-langkahnya bisa dilihat [di sini](https://bookdown.org/yihui/blogdown/). Bagi yang berminat untuk belajar, silakan pelajari buku [blogdown: Creating Websites with R Markdown](https://bookdown.org/yihui/blogdown/). Buku tersebut tersedia secara gratis.
 Dengan menggunakan `blogdown`, membuat postingan baru dan menampilkan hasil analisa data menggunakan **R** bisa dilakukan melalui R Studio. Menarik bukan?
